<resources>
    <string name="app_name">AIEster</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="translator">translator</string>
    <string name="img_to_txt">Img To Txt</string>
    <string name="chatgpt">Chatgpt</string>
    <string name="image_generator">Image generator</string>
    <string name="source_text">Source Text</string>
    <string name="translator_tv">Translator</string>
    <string name="or">OR</string>
    <string name="say_something">Say Something</string>
    <string name="translate">Translate</string>
    <string name="translated_text">Translated Text</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="capture_img">Capture Image</string>
    <string name="gallery">Gallery</string>
    <string name="imgtotext">ImgtoText</string>
    <string name="snap">Snap</string>
    <string name="detect_text">Detect Text</string>
    <string name="detecttext">Detecttext</string>
    <string name="your_detected_text_will_be_display_here">Your detected text will be display here!</string>
    <string name="open">Open</string>
    <string name="generate_image">Generate Image</string>
    <string name="enter_text_to_generate_image">Enter text to generate image!!</string>
    <string name="generate">Generate</string>
    <string name="generatedimg">GeneratedImg</string>
</resources>